[tool.poetry]
name = "fastapi_healthcheck"
version = "0.2.3"
description = "Base package to handle health checks with FastAPI."
authors = ["James Tombleson <luther38@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jtom38/fastapi_healthcheck"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI"
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
